--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -189,6 +189,24 @@ input:active {
   background-color: #6c8cff;
 }
 
+.btn {
+  display: flex;
+  margin: 0 auto;
+}
+
+.is-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .loader {
   width: 64px;
   height: 64px;
